force-app/main/default/objects/OrderItem/fields/Barcode_Generated__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Generated__c</fullName>
    <label>Barcode Generated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>