force-app/main/default/objects/OrderItem/fields/Barcode_Image__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Image__c</fullName>
    <label>Barcode Image</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>